# vello-R-graphics-device-test

./: Cargo.toml  README.md  build.rs
proto/: draw.proto  graphics_device.proto
src/: client.rs  main.rs  server.rs  utils.rs
vellogd-cli/src/: main.rs
vellogd-client/: Cargo.toml
vellogd-server/src/: main.rs
