[package]
name = "winit-proxy-test"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[dependencies]
winit = "*"
vello = { git = "https://github.com/linebender/vello" }

pollster = "0.3"
anyhow = "1.0"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"
